--- a/BingApplication/Properties/Resources.resx
+++ b/BingApplication/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="ding" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\703.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Version" xml:space="preserve">
+    <value>0.2.5</value>
+  </data>
 </root>
